--- a/stylesheet/projects_style.css
+++ b/stylesheet/projects_style.css
@@ -98,6 +98,7 @@ background-color: whitesmoke;
     display: flex;
     flex-direction: column;
     justify-content: center;  
+    align-items: center;
     padding: 10px; 
 }
 .content_aboutme_text{
