index nav bar ultimate updating
done!

--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -4,7 +4,7 @@
     gap : 5px;
     height: 100vh;
     grid-template:
-    "name nav" 0.5fr
+    "head_wrapper head_wrapper" 0.5fr
     "content content" 4fr
     "footer footer" 0.5fr
     ;
@@ -13,19 +13,22 @@
 .head_wrapper{
     position: fixed;
     top:0px;
-    width: 100%;
-    height: 100%;
+    width: 98%;
+    height: 20%;
     padding: 5px 0px;
+
     align-items: center;
+    
 
 
 }
 .head_wrapper_content{
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    right: 0px;
+    justify-content: space-between;
+
     width: 100%;
+    background-color: white;
 
 
 }
@@ -67,16 +70,18 @@ background-color: whitesmoke;
     background-color: white;
     font-family: 'Montserrat', sans-serif;
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     align-items: center;
+    
 }
 
 #menu{
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: flex-start;
     align-items: flex-end;
     top: 0px;
+    left: 0px;
 }
 
 
@@ -88,6 +93,7 @@ background-color: whitesmoke;
     line-height: 12px;
     vertical-align: middle;
     text-align: center;
+    left: 0px;
     
 }
 
