--- a/stylesheet/aboutme_style.css
+++ b/stylesheet/aboutme_style.css
@@ -10,6 +10,32 @@
     ;
 }
 
+.head_wrapper{
+    position: fixed;
+    top:0px;
+    width: 98%;
+    height: 20%;
+    padding: 0px;
+
+    align-items: center;
+    
+
+
+}
+.head_wrapper_content{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    width: 100%;
+    background-color: white;
+
+
+}
+
+
+
+
 .home{
     
     text-decoration: none;
@@ -98,7 +124,7 @@ background-color: whitesmoke;
     display: flex;
     flex-direction: column;
     justify-content: center;  
-    padding: 10px; 
+    padding: ; 
 }
 .content_aboutme_text{
     display: flex;
