--- a/stylesheet/projects_style.css
+++ b/stylesheet/projects_style.css
@@ -10,6 +10,30 @@
     ;
 }
 
+.head_wrapper{
+    position: fixed;
+    top:0px;
+    width: 98%;
+    height: 20%;
+    padding:  0px;
+
+    align-items: center;
+    
+
+
+}
+.head_wrapper_content{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    background-color: white;
+
+
+}
+
+
+
 .home{
     
     text-decoration: none;
