--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -15,7 +15,7 @@
     top:0px;
     width: 98%;
     height: 20%;
-    padding: 5px 0px;
+    padding:  0px;
 
     align-items: center;
     
@@ -26,7 +26,6 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-
     width: 100%;
     background-color: white;
 
@@ -147,8 +146,7 @@ background-color: whitesmoke;
 }
 
 a{
-    text-decoration: none;
-    
+    text-decoration: none;  
 }
 
 
