--- a/stylesheet/contact_style.css
+++ b/stylesheet/contact_style.css
@@ -19,7 +19,30 @@
     ;
     
     }
+    .head_wrapper{
+        position: fixed;
+        top:0px;
+        width: 98%;
+        height: 20%;
+        padding: 5px 0px;
+        grid-area: head_wrapper;
+        align-items: center;
+    }
+    .head_wrapper_content{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
     
+        width: 100%;
+        background-color: white;
+    
+    
+    }
+    
+
+
+
+
     
     /*Header css start*/
     
