--- a/stylesheet/projects_style.css
+++ b/stylesheet/projects_style.css
@@ -4,10 +4,33 @@
     gap : 5px;
     height: 100vh;
     grid-template:
-    "name nav" 0.5fr
+    "head_wrapper head_wrapper" 0.5fr
     "content content" 4fr
     "footer footer" 0.5fr
     ;
+}
+
+.head_wrapper{
+    position: fixed;
+    top:0px;
+    width: 98%;
+    height: 20%;
+    padding: 5px 0px;
+
+    align-items: center;
+    
+
+
+}
+.head_wrapper_content{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    width: 100%;
+    background-color: white;
+
+
 }
 
 .home{
