--- a/stylesheet/resume_style.css
+++ b/stylesheet/resume_style.css
@@ -10,6 +10,27 @@
     ;
 }
 
+.head_wrapper{
+    position: fixed;
+    top:0px;
+    width: 98%;
+    height: 20%;
+    padding: 5px 0px;
+    grid-area: head_wrapper;
+    align-items: center;
+}
+.head_wrapper_content{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    width: 100%;
+    background-color: white;
+}
+
+
+
+
 .home{
     
     text-decoration: none;
