--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -16,11 +16,8 @@
     width: 98%;
     height: 20%;
     padding: 5px 0px;
-
+    grid-area: head_wrapper;
     align-items: center;
-    
-
-
 }
 .head_wrapper_content{
     display: flex;
@@ -29,8 +26,6 @@
 
     width: 100%;
     background-color: white;
-
-
 }
 
 .home{
