--- a/stylesheet/contact_style.css
+++ b/stylesheet/contact_style.css
@@ -27,16 +27,14 @@
         padding: 5px 0px;
         grid-area: head_wrapper;
         align-items: center;
+        padding-bottom: 2%;
     }
     .head_wrapper_content{
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-    
         width: 100%;
         background-color: white;
-    
-    
     }
     
 
@@ -176,6 +174,7 @@
     font-family: 'Montserrat', sans-serif;
     
     color: rgb(182, 182, 197);
+    margin-top: 4%;
     
     }
     
@@ -219,6 +218,7 @@
     /*footer CSS Start*/
     
     .footer{
+    padding-top: 3%;
     
     display: grid;
     
