--- a/stylesheet/projects_style.css
+++ b/stylesheet/projects_style.css
@@ -13,14 +13,11 @@
 .head_wrapper{
     position: fixed;
     top:0px;
-    width: 98%;
+    width: 99%;
     height: 20%;
-    padding: 5px 0px;
-
+    grid-area: head_wrapper;
     align-items: center;
-    
-
-
+    margin-bottom: 5px;
 }
 .head_wrapper_content{
     display: flex;
@@ -122,7 +119,7 @@ background-color: whitesmoke;
     flex-direction: column;
     justify-content: center;  
     align-items: center;
-    padding: 10px; 
+    padding-top: 10px; 
 }
 .content_aboutme_text{
     display: flex;
@@ -144,6 +141,7 @@ background-color: whitesmoke;
 
 /*footer start*/
 .footer{
+    padding-top: 3%;
     display: grid;
     font-size: 10px;
     grid-area:footer;
