--- a/stylesheet/resume_style.css
+++ b/stylesheet/resume_style.css
@@ -15,7 +15,8 @@
     top:0px;
     width: 98%;
     height: 20%;
-    padding: 5px 0px;
+    margin-bottom: 0.5%;
+    padding-bottom: 0.5%;
     grid-area: head_wrapper;
     align-items: center;
 }
@@ -121,6 +122,7 @@ background-color: whitesmoke;
     justify-content: center;
     align-items: center;  
     padding: 10px; 
+    margin-top: 2%;
 }
 .introduce{
     display: flex;
