--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -13,9 +13,9 @@
 .head_wrapper{
     position: fixed;
     top:0px;
-    width: 98%;
+    width: 99%;
     height: 20%;
-    padding: 5px 0px;
+    margin-bottom: 5px;
     grid-area: head_wrapper;
     align-items: center;
 }
@@ -199,6 +199,7 @@ a{
     justify-content: space-evenly;
 }
 .footer{
+    padding-top: 3%;
     display: grid;
     font-size: 10px;
     grid-area:footer;
